kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otusarch-app
  namespace: otusspace
spec:
  selector:
    app: otusarch-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: NodePort
