kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otusarch-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/otusapp/vskokov/)(.*) /$2 last;
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: otusarch-app
                port:
                  number: 8000
            path: /health
            pathType: Prefix
